[project]
name = "python-latest-version"
version = "1.0.0"
description = "Test: Python 3.12+ with latest UV and modern features"
# Requires Python 3.12 or later to leverage newest features
requires-python = ">=3.12"

dependencies = [
    # Latest package versions with 3.12+ support
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",

    # Latest data processing
    "sqlalchemy>=2.0.36",
    "numpy>=2.1.0",  # NumPy 2.x major release
    "pandas>=2.2.0",
    "polars>=1.9.0",  # Modern DataFrame library

    # Latest utilities
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "typer>=0.12.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "scikit-learn>=1.5.0",
]

viz = [
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    # Latest testing tools
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.0",

    # Latest linting and formatting
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pyright>=1.1.380",

    # Latest development tools
    "ipython>=8.29.0",
    "jupyter>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"  # Targeting Python 3.12

# Enable modern Python 3.12 features
select = ["ALL"]
ignore = [
    "D",  # pydocstyle
    "ANN",  # flake8-annotations (we use type hints)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.12"
strict = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov --cov-report=term-missing"